--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,23 @@
-
 * {
   padding: 0;
   margin: 0;
 }
 
 .wrapper-app {
-  border: 1px solid blue;
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: Montserrat, Verdana, sans-serif;
-  font-size: 1.3em;
+  font-family: Montserrat, sans-serif;
+  color: #494B55;
+  font-size: 1.2em;
 }
 
 .cards-wrapper,
 .buttons-wrapper {
-  max-width: 1600px;
+  max-width: 1350px;
 }
 
 .cards-wrapper {
-  border: 1px solid red;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -27,39 +25,8 @@
 }
 
 .buttons-wrapper {
-  border: 1px solid green;
   width: 90%;
   margin-top: 2em;
-}
-
-.facilities-wrapper {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
-  font-size: 0.8em;
-}
-
-.checkboxes-wrapper {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  flex-flow: column wrap;
-  height: 4em;
-  margin: 6px 0px 6px 0px;
-  padding: 10px;
-  border: 1px solid green;
-}
-
-.checkbox {
-  display: flex;
-  align-items: center;
-  margin: 5px 0px 5px 0px;
-}
-
-input[type="checkbox"] {
-  width: 25px;
-  height: 25px;
 }
 
 .rating-button-asc,
@@ -78,6 +45,26 @@ input[type="checkbox"] {
   padding: 0.8em;
 }
 
+.rating-button-asc {
+  background-color: #d9ede6;
+}
+  
+.rating-button-desc {
+  background-color: #dde8ec;
+}
+
+.rating-button {
+  font-size: 1em;
+  padding: 0.8em;
+}
+
+.reset-button {
+  font-size: 0.8em;
+  letter-spacing: 1px;
+  padding: 0.5em;
+  background-color: #bbc5cf;
+  margin-bottom: 5px;
+}
 
 .reset-button:hover {
   background-color: #64848a;
@@ -97,28 +84,16 @@ button:focus {
   outline: 0;
 }
 
-.reset-button {
-  font-size: 0.8em;
-  letter-spacing: 1px;
-  padding: 0.5em;
-  background-color: #bbc5cf;
-  margin-bottom: 5px;
-}
-
-.hotel-img {
-  width: 250px;
-  border-radius: 8px;
-}
-
 .card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   border: 1px solid #BBC5CF;
   border-radius: 8px;
   width: 20em;
   box-shadow: 3px 3px 8px 1px #a1b3c4;
   margin: 40px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .hotel-name {
@@ -128,12 +103,40 @@ button:focus {
 }
 
 .facilities-wrapper {
+  border-top: 1px solid #BBC5CF;
+  padding-top: 10px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  border-top: 1px solid #BBC5CF;
-  padding-top: 10px;
   margin: 35px 0px 15px 0px;
   width: 100%;
   font-size: 0.8em;
 }
+
+.checkboxes-wrapper {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-flow: column wrap;
+  height: 4em;
+  margin: 6px 0px 6px 0px;
+  padding: 10px;
+  border: 1px solid #dde8ec;
+}
+
+.checkbox {
+  margin: 5px 0px 5px 0px;
+  display: flex;
+  align-items: center;
+}
+
+input[type="checkbox"] {
+  width: 25px;
+  height: 25px;
+}
+
+.hotel-img {
+  width: 250px;
+  border-radius: 8px;
+}
+
